--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,76 @@
-# Python cache files
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
 
-# Virtual environment
-venv/
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
 env/
+venv/
 ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# SQLite database
-site.db
-
-# Flask instance folder (if used)
+# Flask / Django stuff
 instance/
+*.sqlite3
+*.db
+*.log
 
-# IDE/editor files
+# PyInstaller
+#  Usually these files are written by a python script from a template
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# IDEs / Editors
 .vscode/
 .idea/
-*.swp
+*.sublime-project
+*.sublime-workspace
 
-# OS files
+# Environment variables / secrets
+.env
+.env.*
+secrets.json
+
+# Node stuff if using front-end frameworks
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Mac / Windows stuff
 .DS_Store
 Thumbs.db
